objects/VerificationCode__c.object
<CustomObject>
    <description>Verification codes to verify the identity of the user.</description>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Verification Codes</relationshipLabel>
        <relationshipName>VerificationCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>The password provided by the user at the time of registration. The contents of this field are only required temporarily and should be cleared after successful registration.</description>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of verification code.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Activation Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Verification Code</label>
    <nameField>
        <label>Verification Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verification Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>